Просмотр пдф файлов

--- a/CHSZiK/src/app/main/pages/header/header.component.html
+++ b/CHSZiK/src/app/main/pages/header/header.component.html
@@ -6,7 +6,7 @@
         <a href="">Панель администратора</a>
       </div>
       <div class="nav-item">
-        <a href="">Просмотр всего оборудования</a>
+        <a href="/list-of-equipment">Просмотр всего оборудования</a>
       </div>
       <div class="nav-item">
         <a href="">Планы работ по обслуживанию</a>
