--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -155,4 +155,19 @@ input.active {
   border: 3px solid #A49343;
   border-radius: 25px;
 }
+.pfd-container {
+  width: 100%;
+  height: 100%;
+}
+
+pdf-viewer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  filter: drop-shadow(5px 5px 5px #222222);
+  border-radius: 5px;
+  border: 1px solid black;
+}
 
