--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
@@ -45,3 +45,21 @@
   border: 1px solid #000000;
   border-radius: 5px
 }
+//////////
+
+.container {
+  width: 300px;
+  height: 300px;
+  margin-top: 10px;
+}
+
+pdf-viewer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  filter: drop-shadow(5px 5px 5px #222222);
+  border-radius: 5px;
+  border: 1px solid black;
+}
