--- a/CHSZiK/src/app/main/pages/header/header.component.html
+++ b/CHSZiK/src/app/main/pages/header/header.component.html
@@ -6,6 +6,9 @@
         <a href="">Панель администратора</a>
       </div>
       <div class="nav-item">
+        <a href="/list-of-location/0">Локации</a>
+      </div>
+      <div class="nav-item">
         <a href="/list-of-equipment">Просмотр всего оборудования</a>
       </div>
       <div class="nav-item">
