--- a/CHSZiK/src/app/main/pages/list-of-equipment/layout/list-of-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/layout/list-of-equipment.component.html
@@ -1,11 +1,11 @@
 <div>
   <div class="wrapper">
     <div class="head">
-      <div class="header">Оборудование</div>
-      <div class="search">
+      <div class="head__header">Оборудование</div>
+      <div class="head__search">
         <input type="text" placeholder="Поиск"/>
       </div>
-      <button class="btn-adding-equipment" (click)="submitAddingEquipment()">Добавить модель оборудования</button>
+      <button class="head__btn-adding" (click)="submitAddingEquipment()">Добавить модель оборудования</button>
     </div>
     <div class="container">
       <div class="item-list">
