--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/components/maintenance-sheet-editing/maintenance-sheet-editing.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/components/maintenance-sheet-editing/maintenance-sheet-editing.component.scss
@@ -48,7 +48,7 @@
   margin-bottom: 15px;
   background-color: rgba(164, 147, 67, 0.5);
   border-radius: 25px;
-  Padding-bottom: 15px;
+  padding-bottom: 15px;
 }
 
 .list {
