--- a/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.scss
@@ -10,26 +10,13 @@
   padding-bottom: 15px;
 }
 .head {
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  justify-content: center;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 .head__header {
   font-size: 32px;
 }
-
-.head__search input{
-  font-size: 16px;
-  text-align: center;
-  width: 460px;
-  height: 40px;
-  border-radius: 5px;
-}
-.head__search {
-  justify-self: center;
-}
-
 
 .head__btn-adding{
   justify-self: end;
@@ -45,8 +32,6 @@
   width: 1440px;
   background: rgba(164, 147, 67, 0.5);
   border-radius: 25px;
-  display: flex;
-  justify-content: center;
   margin-bottom: 15px;
 
   .loading {
@@ -63,7 +48,31 @@
     padding-top: 10px;
     flex-wrap: wrap;
     margin: 0 auto;
+
+    .item-list__item {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-left: 10px;
+      margin-right: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 320px;
+      background-color: #FFFFFF;
+      border-radius: 5px;
+      background-color: white;
+
+      .item-list__item-name {
+        margin-top: 10px;
+        width: 300px;
+        height: 50px;
+        background-color: #D9D9D9;
+        border: 1px solid #000000;
+        border-radius: 5px;
+        margin-bottom: 10px;
+      }
+
+    }
   }
 }
-
 
