--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
@@ -11,7 +11,7 @@
       </div>
       <div [formGroup]="addingNewModelForm">
         <input *ngIf="isNew || updateName == true" formControlName="equipment_name" class="head__name input" type="text"
-               placeholder="Название" [(ngModel)]="parent.equipment_name"/>
+               placeholder="Название"/>
       </div>
     </div>
     <div class="container">
