--- a/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.html
@@ -1,17 +1,17 @@
 <div>
   <div class="wrapper">
     <div class="head">
-      <div class="head__header">Локации</div>
+      <div class="head__header" *ngIf="isMainList">Локации</div>
+      <button *ngIf="isMainList == false" class="btn-back" (click)="btnBack()">Назад <img class="img-back"
+                                                              src="./assets/img/back.png"></button>
+      <div class="head__header" *ngIf="isMainList == false">{{parentLocation?.name_location}}</div>
       <button class="head__btn-adding" (click)="btnOpenModal()">Добавить</button>
     </div>
     <div class="container">
       <div class="item-list">
-<!--        <div *ngIf="loading" class="loading">Loading...</div>-->
-        <div class="item-list__item" (click)="openLocaton(location.id)" *ngFor="let location of location">
-          <div class="item-list__item-name">{{location.location_name}}</div>
-        </div>
+        <app-location-item *ngFor="let location of location" [location]="location"></app-location-item>
       </div>
     </div>
   </div>
-  <app-modal *ngIf="addingNewLocation" (send)="btnCloseModal($event)"></app-modal>
+  <app-modal *ngIf="addingNewLocation" (addSend)="addingLocation($event)" (send)="btnCloseModal($event)"></app-modal>
 </div>
