--- a/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.scss
@@ -18,6 +18,24 @@
   font-size: 32px;
 }
 
+.btn-back {
+  width: 133px;
+  height: 55px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 16px;
+  border: 3px solid #A49343;
+  background-color: #E3B800;
+  border-radius: 5px;
+
+
+  .img-back {
+    width: 50px;
+    height: 50px;
+  }
+}
+
 .head__btn-adding{
   justify-self: end;
   font-size: 16px;
@@ -60,12 +78,27 @@
       width: 320px;
       background-color: #FFFFFF;
       border-radius: 5px;
-      background-color: white;
+
+      .item-list__button {
+        margin-left: 5px;
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        background-color: white;
+
+        .item-list__img {
+          width: 30px;
+          height: 30px;
+        }
+      }
 
       .item-list__item-name {
         margin-top: 10px;
-        width: 300px;
-        height: 50px;
+        width: 265px;
+        height: 40px;
         background-color: #D9D9D9;
         border: 1px solid #000000;
         border-radius: 5px;
