--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -113,14 +113,14 @@ input.active {
 .head__name {
   font-size: 32px;
   text-align: center;
-  width: 460px;
-  height: 40px;
+  //width: 460px;
+  //height: 40px;
   border-radius: 5px;
   margin: 0 auto;
   background-color: #d9d9d9;
 }
 .head__name {
-  justify-self: center;
+
 }
 
 .head__name-change {
@@ -130,8 +130,9 @@ input.active {
 }
 
 .head-name {
-  align-items: center;
+  align-items: stretch;
   display: flex;
+  justify-self: center;
 }
 
 .input {
