--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-item/location-item.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-item/location-item.component.scss
@@ -74,7 +74,10 @@
   .item-list__item-name {
     margin-top: 10px;
     width: 260px;
-    height: 40px;
+    //height: 40px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 5px;
     background-color: #D9D9D9;
     border: 1px solid #000000;
     font-size: 16px;
