--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.scss
@@ -44,7 +44,9 @@
   width: 300px;
   background-color: #D9D9D9;
   border: 1px solid #000000;
-  border-radius: 5px
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
 }
 //////////
 
