--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-window-adding-model/modal-window-adding-model.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-window-adding-model/modal-window-adding-model.component.html
@@ -1,17 +1,37 @@
-<div class="background">
-</div>
 <div class="container">
   <div class="content">
-    <button class="content__button-close" (click)="btnCloseModal()"><img class="content__img-close" src="../../../../../../assets/img/close.png" alt=""></button>
-    <div class="item-list">
-      <div class="item-list__item">Модель test</div>
-      <div class="item-list__item">Модель test</div>
-      <div class="item-list__item">Модель test</div>
-      <div class="item-list__item">Модель test</div>
-      <div class="item-list__item">Модель test</div>
-      <div class="item-list__item">Модель test</div>
-      <div class="item-list__item">Модель test</div>
-    </div>
+    <button class="content__button-close"
+            (click)="btnCloseModal()"><img class="content__img-close"
+                                           src="../../../../../../assets/img/close.png"
+                                           alt=""></button>
+
+    <ng-container *ngIf="isModels; else position">
+      <ng-container *ngTemplateOutlet="models"></ng-container>
+    </ng-container>
+
   </div>
 </div>
+
+
+<ng-template #position>
+  <div class="item-list" *ngFor="let position of positionsArr">
+    <div class="item-list__flex">
+      <div class="item-list__item">{{position.position}}</div>
+      <button (click)="addPositionInLocation(position.id)" class="item-list__button"><img class="item-list__img" src="../../../../../../../../assets/img/add.png" alt=""></button>
+    </div>
+  </div>
+  <form [formGroup]="addingPositionForm" class="item-list__create">
+    <input formControlName="position" class="item-list__input" type="text" placeholder="название">
+    <button (click)="addingNewPosition()"
+            [disabled]="addingPositionForm.invalid" class="item-list__button"><img class="item-list__img" src="../../../../../../../../assets/img/apply.png" alt=""></button>
+  </form>
+</ng-template>
+
+
+<ng-template #models>
+  <div class="item-list" *ngFor="let model of modelsArr">
+    <div (click)="openPositionsOfModel(model.id)" class="item-list__item">{{model.equipment_name}}</div>
+  </div>
+</ng-template>
+
 
