--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-window-adding-model/modal-window-adding-model.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-window-adding-model/modal-window-adding-model.component.scss
@@ -5,7 +5,7 @@
 
 .background {
   background-color: black;
-  opacity:0.5;
+  opacity: 0.5;
   position: fixed;
   top: 0;
   right: 0;
@@ -14,12 +14,7 @@
 }
 
 .container {
-  top: 160px;
-  position: absolute;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
 
   .content {
     background-color: white;
@@ -29,24 +24,62 @@
     display: flex;
     flex-direction: column;
 
+    .item-list__button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 10px;
+      width: 30px;
+      height: 30px;
+      border-radius: 50px;
+      border: 1px solid #A49343;
+      background-color: #E3B800;
+
+      .item-list__img {
+        width: 30px;
+        height: 30px;
+      }
+    }
+
+    .item-list__create {
+      margin-top: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding-bottom: 5px;
+
+      .item-list__input {
+        width: 340px;
+        height: 30px;
+        border-radius: 5px;
+      }
+    }
+
     .item-list {
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin-top: 5px;
+
+      .item-list__flex {
+        display: flex;
+        align-items: center;
+      }
 
       .item-list__item {
+        padding-bottom: 10px;
+        padding-top: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 5px;
-        width: 380px;
+        width: 340px;
         background-color: #D9D9D9;
         border-radius: 5px;
-        height: 30px;
       }
     }
   }
 }
+
 .content__button-close {
   width: 25px;
   height: 25px;
