--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.html
@@ -6,17 +6,27 @@
       <div class="head__header">{{parentLocation?.name_location}}</div>
       <div class="head__btns">
         <button (click)="openLocation()" class="head__btn">Разбить локацию</button>
-        <button (click)="openModalWindowAddingModel()" class="head__btn">Добавить оборудование</button>
+        <button class="head__btn" (click)="openModalWindowAddingModel()">Добавить оборудование</button>
       </div>
     </div>
     <div class="container">
       <div class="item-list">
         <!--        <div *ngIf="loading" class="loading">Loading...</div>-->
-        <div class="item-list__item">
-          <div class="item-list__item-name">Название: 9090909009 9090909009 9090909009 9090909009</div>
-        </div>
+<!--        <div class="item-list__item" *ngFor="let positionModel of positionModel">-->
+<!--          <img class="item-list__image-model" [src]="positionModel?.image" alt="">-->
+<!--          <div class="item-list__item-name">-->
+<!--            <div>-->
+<!--              Название: {{positionModel.equipment_name}}-->
+<!--            </div>-->
+<!--            <div>-->
+<!--              Позиция: {{positionModel.position}}-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <button class="item-list__item-delete" (click)="deletePositionModel(positionModel.id)">Удалить</button>-->
+<!--        </div>-->
+        <app-location-page-item *ngFor="let position of positionModel" [position]="position"></app-location-page-item>
       </div>
     </div>
   </div>
-  <app-modal-window-adding-model *ngIf="openModalWindow" (send)="btnCloseModal($event)"></app-modal-window-adding-model>
+  <app-modal-window-adding-model *ngIf="openModalWindow"></app-modal-window-adding-model>
 </div>
