--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.scss
@@ -60,9 +60,7 @@
   }
 
   .item-list {
-    //justify-content: center;
     width: 1360px;
-    //box-sizing: border-box;
     display: flex;
     padding-bottom: 10px;
     padding-top: 10px;
@@ -75,6 +73,7 @@
       margin-left: 10px;
       margin-right: 10px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       width: 320px;
@@ -82,14 +81,34 @@
       border-radius: 5px;
       background-color: white;
 
-      .item-list__item-name {
+      .item-list__item-delete {
+        padding-left: 6px;
+        padding-right: 6px;
+        margin-top: 5px;
+        border-radius: 5px;
+        font-size: 16px;
+        margin-bottom: 5px;
+        border: 3px solid #A49343;
+        background-color: #E3B800;
+      }
+
+      .item-list__image-model {
         margin-top: 10px;
         width: 300px;
-        height: 50px;
+        height: 300px;
+        border-radius: 5px;
+        border: 1px solid black;
+      }
+
+      .item-list__item-name {
+        padding-left: 5px;
+        padding-bottom: 5px;
+        padding-top: 5px;
+        margin-top: 10px;
+        width: 300px;
         background-color: #D9D9D9;
         border: 1px solid #000000;
         border-radius: 5px;
-        margin-bottom: 10px;
       }
 
     }
