--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.scss
@@ -66,11 +66,24 @@
   align-items: center;
   border: 3px solid #A49343;
   background-color: #E3B800;
+  transition: 0.15s linear;
 
   .img-apply {
     width: 35px;
     height: 35px;
   }
+}
+
+button:hover {
+  font-size: 17px;
+  transition: 0.15s linear;
+  background: #A49343;
+  border: 3px solid #E3B800;
+}
+button:active {
+  font-size: 16px;
+  border: 3px solid #A49343;
+  background-color: #E3B800;
 }
 
 .input-name-component {
