--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/layout/setting-component.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/layout/setting-component.component.html
@@ -18,7 +18,7 @@
       <div class="name-component">
         <p>{{part.equipment_name}}</p>
       </div>
-      <button (click)="openUpgradePart()" class="setting-component__btn"> <img class="setting-component__img" src="../../../../../../../../../assets/img/change.png" alt=""> </button>
+      <img (click)="openUpgradePart()" class="setting-component__img" src="../../../../../../../../../assets/img/change.png" alt="">
     </div>
 
 
