--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.html
@@ -12,6 +12,7 @@
   </div>
   <div class="btn">
     <button (click)="openSettings()" class="setting">Редактировать</button>
+    <button (click)="openPositionModal()" class="setting">Позиции</button>
     <button (click)="deleteModel()" class="setting">Удалить</button>
   </div>
 </div>
