--- a/CHSZiK/src/app/main/pages/list-of-location/components/modal/modal.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/modal/modal.component.scss
@@ -78,6 +78,18 @@
       border: 3px solid #A49343;
       background-color: #E3B800;
       border-radius: 25px;
+      transition: 0.15s linear;
+    }
+    button:hover {
+      font-size: 17px;
+      transition: 0.15s linear;
+      background: #A49343;
+      border: 3px solid #E3B800;
+    }
+    button:active {
+      font-size: 16px;
+      border: 3px solid #A49343;
+      background-color: #E3B800;
     }
 
   }
