--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-window-adding-model/modal-window-adding-model.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-window-adding-model/modal-window-adding-model.component.scss
@@ -39,6 +39,20 @@
         width: 30px;
         height: 30px;
       }
+
+    }
+
+    button {
+      transition: 0.15s linear;
+    }
+    button:hover {
+      transition: 0.15s linear;
+      background: #A49343;
+      border: 1px solid #E3B800;
+    }
+    button:active {
+      border: 1px solid #A49343;
+      background-color: #E3B800;
     }
 
     .item-list__create {
@@ -97,5 +111,20 @@
 .content__img-close {
   width: 25px;
   height: 25px;
+}
+
+button {
+  transition: 0.15s linear;
+}
+button:hover {
+  font-size: 17px;
+  transition: 0.15s linear;
+  background: #A49343;
+  border: 3px solid #E3B800;
+}
+button:active {
+  font-size: 16px;
+  border: 3px solid #A49343;
+  background-color: #E3B800;
 }
 
