--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.scss
@@ -18,6 +18,11 @@
   font-size: 32px;
 }
 
+.head__btns {
+  display: flex;
+  align-items: center;
+}
+
 .head__btn{
   margin-left: 15px;
   justify-self: end;
@@ -45,6 +50,21 @@
     width: 50px;
     height: 50px;
   }
+}
+
+button {
+  transition: 0.15s linear;
+}
+button:hover {
+  font-size: 17px;
+  transition: 0.15s linear;
+  background: #A49343;
+  border: 3px solid #E3B800;
+}
+button:active {
+  font-size: 16px;
+  border: 3px solid #A49343;
+  background-color: #E3B800;
 }
 
 .container {
@@ -114,4 +134,5 @@
     }
   }
 }
+
 
