--- a/CHSZiK/src/styles.scss
+++ b/CHSZiK/src/styles.scss
@@ -36,3 +36,7 @@ $CHSZiK-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button {
+  cursor: pointer;
+}
