--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/modal-position/modal-position.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/modal-position/modal-position.component.html
@@ -1,16 +1,15 @@
 <div class="container">
   <div class="content">
     <div class="content__control-btn">
-      <button (click)="back()" class="content__button-control" *ngIf="!isModels"><img class="content__img-control" src="../../../../../../assets/img/back.png" alt=""></button>
-      <div *ngIf="isModels"></div>
+      <div></div>
       <button class="content__button-control"
               (click)="btnCloseModal()"><img class="content__img-control"
                                              src="../../../../../../assets/img/close.png"
                                              alt=""></button>
     </div>
 
-    <ng-container *ngIf="isModels; else position">
-      <ng-container *ngTemplateOutlet="models"></ng-container>
+    <ng-container>
+      <ng-container *ngTemplateOutlet="position"></ng-container>
     </ng-container>
 
   </div>
@@ -22,9 +21,8 @@
   <div class="item-list" *ngFor="let position of positionsArr">
     <div class="item-list__flex">
       <div class="item-list__item">{{position.position}}</div>
-      <button (click)="addPositionInLocation(position.id)" class="item-list__button"><img class="item-list__img"
-                                                                                          src="../../../../../../../../assets/img/add.png"
-                                                                                          alt=""></button>
+      <img *ngIf="position.group_id" (click)="deletePosition(position.group_id)" class="item-list__img-delete"
+           src="../../../../../../../../assets/img/delete.png" alt="">
     </div>
   </div>
   <form [formGroup]="addingPositionForm" class="item-list__create">
@@ -36,12 +34,5 @@
   </form>
 </ng-template>
 
-
-<ng-template #models>
-  <p>Модели</p>
-  <div class="item-list" *ngFor="let model of modelsArr">
-    <div (click)="openPositionsOfModel(model.id)" class="item-list__item">{{model.equipment_name}}</div>
-  </div>
-</ng-template>
 
 
