--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/modal-position/modal-position.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/modal-position/modal-position.component.scss
@@ -104,6 +104,13 @@
   }
 }
 
+.item-list__img-delete {
+  margin-left: 7px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+}
+
 .content__button-control {
   width: 25px;
   height: 25px;
