--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-window-adding-model/modal-window-adding-model.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-window-adding-model/modal-window-adding-model.component.scss
@@ -119,6 +119,13 @@
   background-color: #E3B800;
 }
 
+.item-list__img-change {
+  margin-left: 10px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+}
+
 .content__img-control {
   width: 25px;
   height: 25px;
